--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 beautifulsoup4==4.6.0
 certifi==2018.4.16
 chardet==3.0.4
+cycler==0.10.0
 idna==2.6
+kiwisolver==1.0.1
+matplotlib==2.2.2
+mpl-finance==0.10.0
 numpy==1.14.3
 pandas==0.23.0
+pyparsing==2.2.0
 python-dateutil==2.7.3
 pytz==2018.4
 requests==2.18.4
